@@ -22,6 +22,12 @@ they occurred between. For more detailed information see the
 @itemize @minus
 
 @item 5 new move-cursor command 4 for moving diagonally (move-cursor -northwest, -northeast, -southwest, -southeast), and move-cursor-center [Christopher Bratusek]
+
+@end itemize
+@item Other Changes:
+@itemize @minus
+
+@item Changing raise-tabs-on-hover takes effect immediately now [Christopher Bratusek]
 @end itemize
 @end itemize
 
