@@ -1,3 +1,7 @@
+2009-07-04  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/tabs/tab.jl: make changed value of
+	raise-tabs-on-hover take effect immediately
+
 2009-07-03  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in: post-release version bump to 1.6.0 [branched 1.5.0],
 	bump rep-gtk requirement to 0.90.0, therefore bumped gtk+ requirement
